--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,6 +31,19 @@ http {
     open_file_cache_min_uses 2;
     open_file_cache_errors on;
 
+    SSL параметры временно закомментированы
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
+    ssl_ecdh_curve secp384r1;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_timeout 4h;
+    ssl_buffer_size 8k;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 1.1.1.1 8.8.8.8 valid=300s;
+    resolver_timeout 5s;
+
     gzip on;
     gzip_vary on;
     gzip_proxied any;
@@ -46,12 +59,15 @@ http {
 
     server {
         listen 80;
-        server_name 137.184.123.82;
+        server_name 3-gymnasium.kg www.3-gymnasium.kg;
+        return 301 https://$server_name$request_uri;
     }
 
     server {
-        listen 443;  # Убран параметр ssl
-        server_name 137.184.123.82;
+        listen 443 ssl http2;
+        server_name 3-gymnasium.kg www.3-gymnasium.kg;
+        ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
 
         client_max_body_size 100M;
         client_body_buffer_size 128k;
@@ -126,6 +142,7 @@ http {
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; # Закомментировано, так как используется без HTTPS
         add_header X-XSS-Protection "1; mode=block" always;
 
         location ~ /\. {
@@ -133,161 +150,3 @@ http {
         }
     }
 }
-
-
-# load_module modules/ngx_http_brotli_filter_module.so;
-# load_module modules/ngx_http_brotli_static_module.so;
-
-# user nginx;
-# worker_processes auto;
-
-# events {
-#     worker_connections 8192;
-#     use epoll;
-#     multi_accept on;
-# }
-#
-# http {
-#     include /etc/nginx/mime.types;
-#     default_type application/octet-stream;
-
-#     access_log /var/log/nginx/access.log;
-#     error_log /var/log/nginx/error.log warn;
-#
-#     sendfile on;
-#     tcp_nopush on;
-#     tcp_nodelay on;
-#     keepalive_timeout 65;
-#     keepalive_requests 10000;
-#     reset_timedout_connection on;
-#     client_body_timeout 12;
-#     send_timeout 10;
-
-#     open_file_cache max=1000 inactive=20s;
-#     open_file_cache_valid 30s;
-#     open_file_cache_min_uses 2;
-#     open_file_cache_errors on;
-
-#     # SSL параметры временно закомментированы
-#     # ssl_protocols TLSv1.2 TLSv1.3;
-#     # ssl_prefer_server_ciphers on;
-#     # ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
-#     # ssl_ecdh_curve secp384r1;
-#     # ssl_session_cache shared:SSL:50m;
-#     # ssl_session_timeout 4h;
-#     # ssl_buffer_size 8k;
-#     # ssl_stapling on;
-#     # ssl_stapling_verify on;
-#     # resolver 1.1.1.1 8.8.8.8 valid=300s;
-#     # resolver_timeout 5s;
-
-#     gzip on;
-#     gzip_vary on;
-#     gzip_proxied any;
-#     gzip_comp_level 6;
-#     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
-#     gzip_min_length 1024;
-
-#     brotli on;
-#     brotli_comp_level 6;
-#     brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml font/woff2;
-
-#     limit_req_zone $binary_remote_addr zone=one:10m rate=30r/s;
-
-#     server {
-#         listen 80;
-#         # server_name 3-gymnasium.kg www.3-gymnasium.kg; # Закомментировано для использования IP-адреса
-#         server_name 137.184.123.82;
-#         # return 301 https://$server_name$request_uri; # Закомментировано для отключения редиректа на HTTPS
-#     }
-#
-#     server {
-#         listen 443; # Закомментировано "ssl" для отключения SSL
-#         # server_name 3-gymnasium.kg www.3-gymnasium.kg; # Закомментировано для использования IP-адреса
-#         server_name 137.184.123.82;
-#
-#         # SSL сертификаты временно закомментированы, так как они привязаны к домену
-#         # ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
-#         # ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
-#
-#         client_max_body_size 100M; # Увеличен максимальный размер тела запроса
-#         client_body_buffer_size 128k;
-#
-#         location /static/ {
-#             alias /app/staticfiles/;
-#             try_files $uri $uri/ =404;
-#             expires 30d;
-#             add_header Cache-Control "public, max-age=2592000, immutable";
-#             access_log off;
-#         }
-#
-#         location /media/ {
-#             alias /app/media/;
-#             try_files $uri $uri/ =404;
-#             expires 30d;
-#             add_header Cache-Control "public, max-age=2592000, immutable";
-#             access_log off;
-#         }
-#
-#         location /api/ {
-#             limit_req zone=one burst=100 nodelay;
-#             proxy_pass http://web:9000;
-#             proxy_http_version 1.1;
-#             proxy_set_header Connection "";
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#             proxy_buffering on;
-#             proxy_buffer_size 128k;
-#             proxy_buffers 4 256k;
-#             proxy_busy_buffers_size 256k;
-#             proxy_read_timeout 120s;
-#             proxy_send_timeout 120s;
-#             proxy_set_header Accept-Encoding "";
-#         }
-#
-#         location /accounts/ {
-#             proxy_pass http://web:9000;
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#         }
-#
-#         location /admin {
-#             proxy_pass http://web:9000;
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#         }
-#
-#         location / {
-#             proxy_pass http://frontend:3000;
-#             proxy_http_version 1.1;
-#             proxy_set_header Connection "";
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#             proxy_buffering on;
-#             proxy_buffer_size 128k;
-#             proxy_buffers 4 256k;
-#             proxy_busy_buffers_size 256k;
-#             proxy_read_timeout 120s;
-#             proxy_send_timeout 120s;
-#             proxy_set_header Accept-Encoding "";
-#         }
-#
-#         add_header X-Frame-Options "SAMEORIGIN" always;
-#         add_header X-Content-Type-Options "nosniff" always;
-#         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-#         # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; # Закомментировано, так как используется без HTTPS
-#         add_header X-XSS-Protection "1; mode=block" always;
-#
-#         location ~ /\. {
-#             deny all;
-#         }
-#     }
-# }
