--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,18 +31,17 @@ http {
     open_file_cache_min_uses 2;
     open_file_cache_errors on;
 
-    # SSL settings are commented out
-    # ssl_protocols TLSv1.2 TLSv1.3;
-    # ssl_prefer_server_ciphers on;
-    # ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
-    # ssl_ecdh_curve secp384r1;
-    # ssl_session_cache shared:SSL:50m;
-    # ssl_session_timeout 4h;
-    # ssl_buffer_size 8k;
-    # ssl_stapling on;
-    # ssl_stapling_verify on;
-    # resolver 1.1.1.1 8.8.8.8 valid=300s;
-    # resolver_timeout 5s;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
+    ssl_ecdh_curve secp384r1;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_timeout 4h;
+    ssl_buffer_size 8k;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 1.1.1.1 8.8.8.8 valid=300s;
+    resolver_timeout 5s;
 
     gzip on;
     gzip_vary on;
@@ -60,24 +59,17 @@ http {
     server {
         listen 80;
         server_name 3-gymnasium.kg www.3-gymnasium.kg;
-        # HTTPS redirect is commented out
-        # return 301 https://$server_name$request_uri;
+        return 301 https://$server_name$request_uri;
+    }
 
-        location / {
-            proxy_pass http://frontend:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+    server {
+        listen 443 ssl http2;
+        server_name 3-gymnasium.kg www.3-gymnasium.kg;
+        ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
 
-        location /api/ {
-            proxy_pass http://web:9000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+        client_max_body_size 100M;
+        client_body_buffer_size 128k;
 
         location /static/ {
             alias /app/staticfiles/;
@@ -95,6 +87,24 @@ http {
             access_log off;
         }
 
+        location /api/ {
+            limit_req zone=one burst=100 nodelay;
+            proxy_pass http://web:9000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering on;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
+            proxy_set_header Accept-Encoding "";
+        }
+
         location /accounts/ {
             proxy_pass http://web:9000;
             proxy_set_header Host $host;
@@ -110,6 +120,32 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-    }
 
+        location / {
+            proxy_pass http://frontend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering on;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
+            proxy_set_header Accept-Encoding "";
+        }
+
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+
+        location ~ /\. {
+            deny all;
+        }
+    }
 }
