--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ cryptography==42.0.8
 defusedxml==0.8.0rc2
 Django==5.0.6
 django-allauth==0.63.3
+django-ckeditor
 django-celery-beat==2.7.0
 django-cors-headers==4.4.0
 django-debug-toolbar==4.4.6
