--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,8 @@
     "sharp": "^0.30.7",
     "three": "^0.168.0",
     "use-debounce": "^10.0.3",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "html-react-parser": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.16.10",
