--- a/.env
+++ b/.env
@@ -20,9 +20,8 @@ CACHE_LOCATION=redis://redis:6379/1
 CELERY_BROKER_URL=${REDIS_URL}
 CELERY_RESULT_BACKEND=${REDIS_URL}
 
-CORS_ALLOWED_ORIGINS=https://3-gymnasium.kg,https://www.3-gymnasium.kg, http://localhost:3000
-CSRF_TRUSTED_ORIGINS=https://3-gymnasium.kg,https://www.3-gymnasium.kg, http://localhost:3000
-
+CORS_ALLOWED_ORIGINS=https://3-gymnasium.kg,https://www.3-gymnasium.kg,http://localhost:3000,http://194.163.132.44
+CSRF_TRUSTED_ORIGINS=https://3-gymnasium.kg,https://www.3-gymnasium.kg,http://localhost:3000,http://194.163.132.44
 MEDIA_URL=/media/
 STATIC_URL=/static/
 
