--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,26 +1,27 @@
 FROM node:18-alpine AS builder
 
 WORKDIR /app
-
 COPY package*.json ./
-
-RUN npm ci || npm install
+RUN npm ci
 
 COPY . .
-
 RUN npm run build
 
-FROM node:18-alpine
-
+FROM node:18-alpine AS runner
 WORKDIR /app
 
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/next.config.mjs ./
+ENV NODE_ENV production
 
-RUN npm ci --only=production
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
+
+USER nextjs
 
 EXPOSE 3000
+ENV PORT 3000
 
-CMD ["npm", "start"]
+CMD ["node", "server.js"]
