--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:18-alpine AS builder
 
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm install --legacy-peer-deps
+RUN npm install -D @next/bundle-analyzer
 
 COPY . .
 RUN npm run build
