--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,26 +1,21 @@
 FROM node:18-alpine AS builder
-
 WORKDIR /app
 COPY package*.json ./
 RUN npm install --legacy-peer-deps
-RUN npm install -D @next/bundle-analyzer @tanstack/react-query
-
+RUN npm install @tanstack/react-query
 COPY . .
 RUN npm run build
 
 FROM node:18-alpine AS runner
 WORKDIR /app
-
 ENV NODE_ENV production
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
-
-COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
 
 USER nextjs
 EXPOSE 3000
-
-CMD ["npm", "start"]
+ENV PORT 3000
+CMD ["node", "server.js"]
