--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,31 +1,19 @@
-# Dockerfile
 FROM node:18-alpine AS builder
-
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm install --legacy-peer-deps
-RUN npm install @tanstack/react-query @next/bundle-analyzer next-pwa
-
+RUN npm install @tanstack/react-query critters
 COPY . .
 RUN npm run build
 
 FROM node:18-alpine AS runner
-
 WORKDIR /app
-
 ENV NODE_ENV production
-ENV PORT 3000
-
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
-
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next/standalone ./
 COPY --from=builder /app/.next/static ./.next/static
-
 USER nextjs
-
 EXPOSE 3000
-
 CMD ["node", "server.js"]
